    * http://releases.mozilla.org/pub/mozilla.org/xulrunner/releases/


NEW FEATURES IN VERSION 2012XXXX

   o The Javadoc now links with the forklabs-baselib API.
   o New shortcut methods in XPCOMConverter to access attributes of a node.
   o The crawler now accepts URL objects for navigation.
   o The selector now works with class Filters to creates its filters.
   o The selector can now easily return a single node.
   o Many new filters


VERSION 20111011

   o A new selector API has been added to select nodes in a document
     much more easily.
   o A new dependency has been added, forklabs-baselib
     (http://code.google.com/p/forklabs-baselib/)


VERSION 20110523

   o Corrected the demo to match the changes on Google Code
   o Added the Ladyr's XULRunner with Java: JavaXPCOM Tutorial
   

VERSION 20101007

   o Added two methods to control the enclosing shell, minimizeBrowser and
     restoreBrowser
   o Added a method to extract the "inner text" from a node in the
     XPCOMConverter, deprecated the same method in class Crawler
   o Partially completed Crawler::teardown() by having it close the enclosing
     shell, nothing is done yet about the display
   o Crawler::configureNewShell() is no longer abstract, it is now an empty
     method (issue #5).
   o Added Crawler::configureNewBrowser(), an empty method to help with the
     configuration of the underlying browser (issue #3).


VERSION 20100913

   o Permission has been given to use class DisplayManager
   o Fixed a bug in the logging of Crawler::navigateTo()
   o Added a method in Crawler to change the title of the enclosing Shell
   o Added a method in Crawler to get the text of a node
   o Added a Converter class with static methods for easy calling
   o Made Crawler::getDocument() SWT-thread-safe
   o Fixed the exception if interrupted while loading, it is now an
     InterruptedIOException from RuntimeException


VERSION 20100904

   o The crawler itself.
   o A XPCOM node inspector.